# nuit-de-linfo-2025

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-backend.yaml  deploy-frontend.yaml  deploy.yaml
apps/backend/: Cargo.toml  Dockerfile  entrypoint.sh
apps/backend/src/: config.rs  domain.rs  main.rs
apps/backend/src/api/: chat_route.rs  mod.rs
apps/backend/src/domain/: constants.rs  errors.rs  models.rs
apps/backend/src/infrastructure/: mistral_client.rs  ollama_client.rs
apps/frontend/: RSE_REPORT.md  package-lock.json  package.json
apps/frontend/public/script/: fake-captcha.js
apps/frontend/src/components/: Chatbot.astro  FakeCaptchaWall.astro  Footer.astro  InputField.astro  InputFieldChess.astro  InputFieldCityRandom.astro  InputFieldCountryInvert.astro  InputFieldLayout.astro  InputFieldNormal.astro  InputFieldPassword.astro  InputFieldPostalSlider.astro  InputFieldRotaryPhone.astro  InputFieldRoulette.astro  InputFieldTeleport.astro  Navbar.astro  Welcome.astro
apps/frontend/src/layouts/: Layout.astro
apps/frontend/src/pages/: Register.astro  [...slug].astro  acdi.astro  fun.astro  index.astro  register.astro
apps/frontend/src/styles/: captcha.css  footer.css  index.css  navbar.css
docs/backend/: chatbot.md
docs/rse/: rse-backend.md  rse-frontend.md
