[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
