[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

log = "0.4"
env_logger = "0.11"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
lru = "0.12"
strsim = "0.11"
actix-governor = "0.6"
rand = "0.8"
redis = "0.24"
rustls = "0.20"
rustls-pemfile = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
